<resources>
    <string name="app_name">&appname;</string>
    <string name="imageUrl" translatable="false">&siteurl;images/"</string>
    <string name="apiBaseUrl" translatable="false">&siteurl;api/"</string>
    <string name="termPolicyUrl" translatable="false">&siteurl;</string>
    <string name="privacy_policy" translatable="false">&siteurl;privacy_policy"</string>
    <string name="otp_enable" translatable="false">&otpEnable;</string>
    <string name="show_copyright" translatable="false">&showcopyright;</string>
    <string name="default_notification_channel_id" translatable="false">&channel_id;</string>
    <string name="package_rider" translatable="false">&riderbundle;</string>
    <string name="package_driver" translatable="false">&driverbundle;</string>
    <string name="google_key_url" translatable="false">&googleMapKey;</string>
    <string name="google_key_map_autocomplete" translatable="false">&googleAutoCompleteKey;</string>
    <string name="whatsapp_url" translatable="false">https://api.whatsapp.com/send?phone=%s&amp;text=%s</string>
    <string name="real_time_db" translatable="false">&firebaseDbMode;</string>
    <string name="distancetype" translatable="false">google</string>
    <string name="hide">Hide</string>
    <string name="rider">Rider</string>
    <string name="emailalreadyexits">"You already have an account with this email. \nTry logging in, instead."</string>
    <string name="invalidelogin">Invalid Login details  </string>
    <string name="signin">SIGN IN</string>
    <string name="usernameemail">"USER NAME OR EMAIL"</string>
    <string name="password">"Password"</string>
    <string name="forgotpassword">FORGOT PASSWORD ?</string>
    <string name="error_msg_vehiclename">"Please enter your vehicle name"</string>
    <string name="error_msg_vehiclenumber">"Please enter your vehicle number"</string>
    <string name="error_msg_vehicletype">"Please choose your vehicle type"</string>
    <string name="error_msg_firstname">"Please enter your first name"</string>
    <string name="error_msg_mobilenumber">"Invalid mobile number"</string>
    <string name="error_msg_lastname">"Please enter your last name"</string>
    <string name="error_msg_email">"Please enter a valid email address"</string>
    <string name="error_msg_phone">"Please enter a valid mobile number"</string>
    <string name="error_msg_password">"Please enter minimum 6 characters"</string>
    <string name="error_msg_address">"Please enter a valid address"</string>
    <string name="error_msg_city">"Please enter a valid city"</string>
    <string name="error_msg_state">"Please enter a valid state"</string>
    <string name="error_msg_post">"Please enter a valid postal code"</string>
    <string name="error_msg_rating">"Please give your rating"</string>
    <string name="camera_permission_description">To capture photos and videos, allow &appname; to access your camera and storage</string>
    <string name="storage_permission_description">To upload image &appname;
        to access your storage</string>
    <string name="location_permission_description">To request your ride, allow &appname; to access your device location</string>
    <string name="audio_permission_description">To Connect phone call, allow &appname; to access your audio settings</string>
    <string name="network_failure">Please check your Internet Connection</string>
    <string name="internal_server_error">Please try again after sometimes.</string>
    <string name="you_are_viewing_old_data">You are viewing offline data, please check your network connection</string>
    <string name="retry">Retry</string>
    <string name="getmobilenumber">Enter your mobile number</string>
    <string name="first">"First Name"</string>
    <string name="last">"Last Name"</string>
    <string name="email">"Email"</string>
    <string name="paypalemail">"PAYPAL EMAIL"</string>
    <string name="address1">"Address 1"</string>
    <string name="address2">"Address 2"</string>
    <string name="city">"City"</string>
    <string name="state">"State"</string>
    <string name="postalcode">"Postal Code"</string>
    <string name="havean_account">Have an account ?</string>
    <string name="login">Log In</string>
    <string name="resetpasswords">Reset your password</string>
    <string name="riderfeedbacktitle">"RIDER FEEDBACK"</string>
    <string name="signout_msg">"Are you sure you want to sign out?"</string>
    <string name="cancel_s">"Cancel"</string>
    <string name="what_would_you_like_to_do">"What would you like to do?"</string>
    <string name="descreption">"By Proceeding, I agree that &appname;or its representatives may contact me by email, phone or SMS (including by automatic telephone dialing system) at the email address or number I provide,including for marketing purposes. I have read and understand the relevant Driver Privacy Statement. Referral amounts and minimum trip requirements may vary from city to city. &appname;may change any incentive amount or incentive criteria at its sole descretion."</string>
    <string name="register">Register</string>
    <string name="vehicle">"VEHICLE DETAILS"</string>
    <string name="vehicle_name">"Vehicle Name / eg: Toyoto Camry, Honda Accord…"</string>
    <string name="vehicle_number">"Vehicle Number / eg: WNF 382"</string>
    <string name="vehicle_type">"Choose your vehicle type"</string>
    <string name="looking">LOOKING FOR THE RIDER APP ?</string>
    <string name="signupwithrider">"SIGN UP WITH RIDER ACCOUNT"</string>
    <string name="or">"OR"</string>
    <string name="trip_star_5">"YOUR CURRENT RATING"</string>
    <string name="current_rating">"LIFETIME TRIPS"</string>
    <string name="trip_cancel">"5 STARS"</string>
    <string name="request_accepted">"RATED TRIPS"</string>
    <string name="enter4digit">Enter the 4-digit code sent to you at </string>
    <string name="resend">Resend Code</string>
    <string name="otp_mismatch">"OTP code Mismatch."</string>
    <string name="otp_emty">"Please enter the OTP"</string>
    <string name="riderfeedback">"Rider Feedback"</string>
    <string name="checkfeedback">"Check out feedback from riders and learn how to improve"</string>
    <string name="drivingstyle">"Driving Style Dashboard"</string>
    <string name="seeyourdriving">"See your driving style profile after completing more trips"</string>
    <string name="cancel_your_trip">"Cancel Your Ride"</string>
    <string name="rider_profile">"RIDER PROFILE"</string>
    <string name="waiting_for_payment">"Waiting for payment…"</string>
    <string name="payment_done">"Payment done"</string>
    <string name="paid">"Paid"</string>
    <string name="documents">"DOCUMENTS"</string>
    <string name="doc">"Please upload your documents."</string>
    <string name="personaldoc">"Please upload your personal \ndocuments."</string>
    <string name="vehicledoc_msg">"To drive with &appname; your vehicle must be a mid–size or full–size sedan that comfortably seats 4-8 passengers."</string>
    <string name="driverlicense_back">"Driver's License - (Back/Reverse)"</string>
    <string name="driverlicense_front">"Driver's License - (Front)"</string>
    <string name="motor_insurance">"Motor Insurance Certificate"</string>
    <string name="registeration">"Certificate of Registration"</string>
    <string name="contract_carriage">"Contract Carriage Permit"</string>
    <string name="continues">"CONTINUE"</string>
    <string name="verify">"VERIFY"</string>
    <string name="takephoto">"Take a photo of your"</string>
    <string name="takephoto_msg">"Please make sure we can easily read all the details."</string>
    <string name="taptoadd">"TAP TO ADD"</string>
    <string name="taptochange">"TAP TO CHANGE"</string>
    <string name="camera">Camera</string>
    <string name="camera_roll">Camera roll</string>
    <string name="home">"Home"</string>
    <string name="earnings">"Earnings"</string>
    <string name="rating">"Ratings"</string>
    <string name="account">"ACCOUNT"</string>
    <string name="offline">"Offline"</string>
    <string name="checkstatus">"Check Status"</string>
    <string name="online">"Online"</string>
    <string name="trip_id">"Trip Id : "</string>
    <string name="enroute">"En Route"</string>
    <string name="navigate">"Navigate"</string>
    <string name="pickup">"Pickup"</string>
    <string name="pick_up">"PICK UP"</string>
    <string name="dropoff">"DROP OFF"</string>
    <string name="contact_C">"CONTACT"</string>
    <string name="call">Call</string>
    <string name="callsonly">"CALLS ONLY"</string>
    <string name="cancel">"CANCEL"</string>
    <string name="minute">"MINUTE"</string>
    <plurals name="minutes">
        <item quantity="one">%d&#160;Min</item>
        <item quantity="other">%d&#160;Mins</item>
    </plurals>
    <string name="help">"Help"</string>
    <string name="edit">"Edit"</string>
    <string name="document_s">"Documents"</string>
    <string name="about">"About"</string>
    <string name="signout">"Sign Out"</string>
    <string name="notrip">"You have no trip"</string>
    <string name="currency">"₹ "</string>
    <string name="tripsdetails">"TRIP DETAIL"</string>
    <string name="triphistory">"TRIP HISTORY"</string>
    <string name="trip_payment">"Trips &amp; Payments"</string>
    <string name="tripearnings">"TRIP EARNINGS"</string>
    <string name="fare">"Base Fare"</string>
    <string name="uberfee">"Access Fee"</string>
    <string name="distancefare">"Distance Fare"</string>
    <string name="timefare">"Time Fare"</string>
    <string name="totalamount">"Total Trip Fare"</string>
    <string name="adminamount">"Admin's Amount"</string>
    <string name="oweamount">"Owe Amount"</string>
    <string name="driverpayout">"Driver Payout"</string>
    <string name="cashcollectable">"Collectable Cash"</string>
    <string name="cash_trip">"Cash Trip"</string>
    <string name="cashcollected">"Cash Collected"</string>
    <string name="waitforrider">"Waiting for rider confirmation"</string>
    <string name="duration">"DURATION"</string>
    <string name="distance">"DISTANCE"</string>
    <string name="thisweek">"THIS WEEK"</string>
    <string name="thisweek_empty">"You have not driven this week"</string>
    <string name="last_trip">"Last trip: "</string>
    <string name="pay_statemet">"Pay Statements"</string>
    <string name="payment">"Payment"</string>
    <string name="payment_failed">"Payment Failed"</string>
    <string name="payout">"Payout"</string>
    <string name="addpayout">Add PayPal Payout</string>
    <string name="most_recent">"Most recent payout: "</string>
    <string name="addpayment_msg">"To add a new payout. Create a email for your &appname;
        account. "</string>
    <string name="begin_trip">"Swipe to Begin Trip"</string>
    <string name="font_Medium" translatable="false">"ClanPro-Medium"</string>
    <string name="font_News" translatable="false">"ClanPro-News"</string>
    <string name="font_UBERMedium" translatable="false">"ClanProForUBER-Medium"</string>
    <string-array name="language" translatable="false">
        <item>English</item>
        <item>فارسی</item>
        <item>Español</item>
        <item>عربى</item>
        <item>Português</item>
        <item>עִברִית</item>
        <item>Français</item>
    </string-array>
    <string name="layout_direction">0</string>
    <string name="Done">Done</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="location_permission_is_required_to_find_the_rides_near_you">Location permission is required to find the rides near you.</string>
    <string name="location_permission_required">Location Permission Required.</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="allow_background_permission">Allow Background Permission</string>
</resources>